--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
     <modules>
 
         <module>registry</module>
+        <module>config</module>
+        <module>monitor</module>
+        <module>zipkin</module>
+        <module>gateway</module>
+        <module>auth-service</module>
+        <module>svca-service</module>
+        <module>svcb-service</module>
     </modules>
 
     <!--配置属性-->
